[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/GFX/Interface/LevelButton/locked.png" type="Texture" id=1]
[ext_resource path="res://Resources/GFX/Interface/LevelButton/BlackStar.png" type="Texture" id=2]
[ext_resource path="res://Resources/GFX/Interface/Font/JetBrainsMono-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/LevelButton.gd" type="Script" id=4]
[ext_resource path="res://Resources/GFX/Interface/LevelButton/unlocked.png" type="Texture" id=5]
[ext_resource path="res://Resources/GFX/Interface/LevelButton/YellowStar.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 7
outline_color = Color( 0.933333, 0.0156863, 0.0156863, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="LevelButton" type="Control"]
anchor_left = 0.0925926
anchor_top = 0.0520833
anchor_right = 0.277778
anchor_bottom = 0.15625
margin_left = -100.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 250, 250 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}
blocked_Texture = ExtResource( 1 )
open_Texture = ExtResource( 5 )
goal_met = ExtResource( 6 )
goal_not_met = ExtResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 150, 140 )
normal = ExtResource( 1 )

[node name="Label" type="Label" parent="TouchScreenButton"]
visible = false
anchor_left = 0.25
anchor_top = 0.17
anchor_right = 0.75
anchor_bottom = 0.83
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Stars" type="Node" parent="TouchScreenButton"]

[node name="Star1" type="Sprite" parent="TouchScreenButton/Stars"]
visible = false
position = Vector2( 160, 295 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Star2" type="Sprite" parent="TouchScreenButton/Stars"]
visible = false
position = Vector2( 248.343, 331.21 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Star3" type="Sprite" parent="TouchScreenButton/Stars"]
visible = false
position = Vector2( 340, 295 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
